trunk/Archive2/91/9accf2090c4d90/output
main.cpp:39:9: error: use of undeclared identifier 'derp'
        derp(0);
        ^
1 error generated.
